Changes for 1.5.1
* Getting history panel to stop closing clicked on expanded paths every time a there is a new event or change, when your mouse is over the history panel. (frigoref)

* Correcting bad history log messages for Edit mode. (veqryn)

* Refactored Trigger Attachment class again to allow triggers to fire other triggers with certain options and properties. (veqryn)

* Created new Trigger Attachment option, activateTrigger, which will allow a trigger to fire other triggers. (veqryn)

* Preliminary work on ability to fire triggers from other triggers. (veqryn)

* Fixing NoSuchElementException in Kamikaze attack ui. (veqryn)

* Created new RelationshipTypeAttachment option, canMoveIntoDuringCombatMove, which stops combat-phase movement, but allows non-combat-phase movement. (veqryn)

* Fixing Chat Panel player name area to be correct size to hold all player names and national flags. (frigoref)

* Adding Alpha+3 National Objectives to xml. (veqryn)

* Added "originalNoWater" as an option for conditions that test territories. (veqryn)

* Fixed bug where paratroopers could not move over enemy sea zones or captured sea zones. (veqryn)

* Fixed bug with moving sea units through sea units belonging to a power not yet at war with. Also possibly fixed bug with Easy AI's comparison method contract. (veqryn)

* Adding Global 1940 alpha 3 as test xml. (veqryn)

* Fixing bug where the neutral (null) player might be asked if it wants to scramble, which gives an error. (veqryn)

* Adding Play-By-Forum method for TripleA War Club, http://www.tripleawarclub.org/  so that people can also play there. (qwertgold)

* Fixing Battle Calc to not include units that are irrelevant to combat. (veqryn)

* Made sure all m_variable types in attachments exactly match the new instance type that is used. This, combined with the previous 2 changes, should fix the history panel bugs that are being caused by not being able to find the correct setter. (veqryn)
