@@ -89,6 +89,22 @@ public class LocalLauncher implements ILauncher
 						game.setRandomSource(new ScriptedRandomSource());
 					}
 					m_gameData.getGameLoader().startGame(game, gamePlayers);
+				} catch (IllegalStateException e)
+				{
+					exceptionLoadingGame = e;
+					Throwable error = e;
+					while (error.getMessage() == null)
+						error = error.getCause();
+					final String message = error.getMessage();
+					m_gameLoadingWindow.doneWait();
+					SwingUtilities.invokeLater(new Runnable()
+					{
+						public void run()
+						{
+							JOptionPane.showMessageDialog(null, message, "Warning", JOptionPane.WARNING_MESSAGE);
+						}
+					});
+
 				} catch (final Exception ex)
 				{
 					ex.printStackTrace();
