@@ -27,7 +27,7 @@ public class ResourceLoader
 {
 	private final URLClassLoader m_loader;
 	
-	public static ResourceLoader getMapresourceLoader(final String mapName)
+	public static ResourceLoader getMapResourceLoader(final String mapName)
 	{
 		final List<String> dirs = getPaths(mapName);
 		dirs.add(new File(GameRunner.getRootFolder(), "/images").getAbsolutePath());
@@ -59,8 +59,8 @@ public class ResourceLoader
 		// At least one must exist
 		if (existing.isEmpty())
 		{
-			throw new IllegalStateException("Could not find file for map: " + mapName + "\r\n" + "Please DOWNLOAD THIS MAP if you do not have it." + "\r\n"
-						+ "If you are making a map or mod, Make sure the mapName property within the xml game file exactly matches the map zip or folder name." + "\r\n" + "\r\n");
+			throw new IllegalStateException("Could not find file folder or zip for map: " + mapName + "\r\n" + "Please DOWNLOAD THIS MAP if you do not have it." + "\r\n"
+						+ "If you are making a map or mod, make sure the mapName property within the xml game file exactly matches the map zip or folder name." + "\r\n" + "\r\n");
 		}
 		final File match = existing.iterator().next();
 		String fileName = match.getName();
