@@ -35,7 +35,7 @@ public class NotificationMessages
 	
 	protected NotificationMessages()
 	{
-		final ResourceLoader loader = ResourceLoader.getMapresourceLoader(UIContext.getMapDir());
+		final ResourceLoader loader = ResourceLoader.getMapResourceLoader(UIContext.getMapDir());
 		final URL url = loader.getResource(PROPERTY_FILE);
 		if (url == null)
 		{
