@@ -39,7 +39,7 @@ public class ProductionTabsProperties
 	protected ProductionTabsProperties(final PlayerID playerId, final List<Rule> mRules, final String mapDir)
 	{
 		m_rules = mRules;
-		final ResourceLoader loader = ResourceLoader.getMapresourceLoader(mapDir);
+		final ResourceLoader loader = ResourceLoader.getMapResourceLoader(mapDir);
 		String propertyFile = PROPERTY_FILE + "." + playerId.getName() + ".properties";
 		URL url = loader.getResource(propertyFile);
 		if (url == null)
